--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "node-device-detector": "^2.1.3",
     "react": "^18",
     "react-dom": "^18",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
