--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@automapper/pojos": "^8.8.1",
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
+    "cbor-x": "^1.6.0",
     "next": "14.2.5",
     "node-device-detector": "^2.1.3",
     "react": "^18",
