--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "node-device-detector": "^2.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.15",
+    "react-toastify": "^10.0.5",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0",
     "zod": "^3.23.8",
