--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
     "cbor-x": "^1.6.0",
+    "jose": "^5.8.0",
     "next": "14.2.5",
     "node-device-detector": "^2.1.3",
     "react": "^18",
