--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@automapper/core": "^8.8.1",
     "@automapper/pojos": "^8.8.1",
+    "@headlessui/react": "^2.1.7",
     "@prisma/client": "^5.17.0",
+    "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.2",
     "cbor-x": "^1.6.0",
     "jose": "^5.8.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "node-device-detector": "^2.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -33,12 +36,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
+    "postcss": "^8.4.45",
     "prisma": "^5.17.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5"
   }
 }
