--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.17.0",
     "@tailwindcss/forms": "^0.5.9",
     "cbor-x": "^1.6.0",
+    "jks-js": "^1.1.3",
     "jose": "^5.8.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
