--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:push": "npx prisma db push"
+    "prisma:push": "npx prisma db push",
+    "prisma:deploy": "npx prisma migrate deploy"
   },
   "dependencies": {
     "@automapper/core": "^8.8.1",
