--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:push": "npx prisma db push",
-    "prisma:deploy": "npx prisma migrate deploy"
+    "prisma:deploy": "npx prisma migrate deploy",
+    "prisma:init": "npx prisma generate"
   },
   "dependencies": {
     "@automapper/core": "^8.8.1",
