from tailwind to materialui, connect form with the request to verifier

--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
   "dependencies": {
     "@automapper/core": "^8.8.1",
     "@automapper/pojos": "^8.8.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.7",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^5.16.7",
+    "@mui/material-nextjs": "^6.1.0",
+    "@mui/x-date-pickers": "^6.20.2",
     "@prisma/client": "^5.19.1",
     "@tailwindcss/forms": "^0.5.9",
     "cbor-x": "^1.6.0",
+    "dayjs": "^1.11.13",
     "jks-js": "^1.1.3",
     "jose": "^5.8.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "node-device-detector": "^2.1.3",
     "react": "^18",
