--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eudi-web-booking-service-demo",
-  "version": "0.1.1",
+  "version": "0.1.2-SNAPSHOT",
   "private": true,
   "scripts": {
     "dev": "next dev",
